[package]
name = "appbiotic-identifier"
version = "0.1.0"
edition = "2021"

[features]
default = ["petname", "uuid"]
petname = ["petname/default-rng", "petname/default-words"]
uuid = ["uuid/v7", "uuid/std"]

[dependencies]
appbiotic-error = { git = "https://github.com/appbiotic/error", branch = "dev-0.1" }
petname = { version = "2.0.2", optional = true }
uuid = { version = "1.11.0", optional = true }
